[tool.poetry]
name = "secure_manager_cli"
version = "0.1.0"
description = ""
authors = ["tegarimansyah <egar.imansyah@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
typer = "^0.9.0"
uvicorn = "^0.24.0.post1"
questionary = "^2.0.1"
httpx = "^0.25.1"
rich = "^13.6.0"
rsa = "^4.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
